# allvm-tools

./: .envrc  .gitignore  .lgtm.yml  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  CREDITS.txt  LICENSE.TXT  Makefile.in  README.md  build.nix  configure  default.nix  format.nix  release.nix  rules.mk  shell.nix
.github/workflows/: test.yml
.travis/: build.sh  ci.sh  configure-nix.sh  full-fetch.sh  install-cachix.sh  install-new-nix.sh
cmake/: ALLVMConfig.cmake.in  CheckFormat.cmake  GetGitRevisionDescription.cmake  Package.cmake  Version.cmake  pandocology.cmake
docs/: ALLVMFormat-Contents.md  ALLVMFormat-Design.md  ALLVMFormat-NonGoals.md  ALLVMFormat-Overview.md  ALLVMFormat-Platform.md  ALLVMFormat-Proposed.md  ALLVMFormat-TODO.md  ALLVMFormat.md  CMakeLists.txt  Examples.md  LLVMVersion.md  Makefile
include/: ALLVMContext.h  ALLVMContextAnchor.h  ALLVMLinker.h  ALLVMVersion.h.in  AOTCompile.h  Allexe.h  Error.h  ExecutionYengine.h  JITCache.h  ResourceLocations.h  StaticCodeGen.h  WLLVMFile.h  ZipArchive.h  ZipWriter.h
include/allvm/: ALLVMContextAnchor.h  ALLVMLinker.h  AOTCompile.h  AdaptiveCompileOnDemandLayer.h  Allexe.h  ContextAnchor.h  DeInlineAsm.h  ExecutionYengine.h  ExitOnError.h  FileRemoverPlus.h  GitVersion.h.in  ModuleFlags.h  ResourceAnchor.h  ResourcePathConfig.h.in  ResourcePaths.h  StaticBinaryCache.h  StaticCodeGen.h  ToolCommon.h  WLLVMFile.h  ZipArchive.h
libs/: CMakeLists.txt  Makefile.in
libs/AOTCompile/: AOTCompile.cpp  CMakeLists.txt
libs/Cache/: CMakeLists.txt  CacheLocation.h  JITCache.cpp  StaticBinaryCache.cpp
libs/Context/: CMakeLists.txt  Context.cpp
libs/ExecutionYengine/: CMakeLists.txt  JITExecutionYengine.cpp  LinuxJIT.cpp  PlatformSpecificJIT.h  StaticExecutionYengine.cpp  orcJIT.cpp  orcJIT.h
libs/Passes/: CMakeLists.txt  DeInlineAsm.cpp
libs/ResourcePaths/: CMakeLists.txt  ResourcePaths.cpp
libs/StaticCodeGen/: ALLVMLinker.cpp  AOTCompile.cpp  CMakeLists.txt  Makefile.in  StaticCodeGen.cpp
libs/all/: Allexe.cpp  CMakeLists.txt  Makefile.in
libs/allvm/: Allexe.cpp  Makefile.in
libs/archive-rw/: CMakeLists.txt  Makefile.in  README.md  ZipArchive.cpp  ZipWriter.cpp  compat.h  config.h  zip.h  zip_close.c  zip_discard.c  zip_new.c  zip_open.c  zip_source_filep.c  zipconf.h  zipint.h  zipwin32.h
libs/none/: CMakeLists.txt  Makefile.in  assembly.h  dso_handle.S  dynamic.S  merge.ar  merge.ar.in  test.cpp
libs/none/musl-patches/: 0001-Build-with-fPIC-large-code-model-to-workaround-RTDyL.patch  0001-Build-with-fPIC-to-workaround-RTDyLd-relocation-limi.patch  0001-musl-handle-NULL-AT_RANDOM.patch  0002-Disable-vdso-support-on-x86_64-we-don-t-support-it-y.patch  0003-Remove-simple-malloc-gets-in-way-of-real-malloc.patch  0004-KLUDGE-More-workaround-weak-alias-this-time-tackling.patch  0005-Another-weak_alias-victim-destructors-for-stdio-and-.patch  0006-configure-improve-tryflag-to-reject-ignored-opt-argu.patch  0007-Partially-revert-remove-potentially-PIC-incompatible.patch  CVE-2016-8859.patch  spawnp-stack.patch
libs/none/musl/patches/: 0001-Build-with-fPIC-large-code-model-to-workaround-RTDyL.patch  0002-Disable-vdso-support-on-x86_64-we-don-t-support-it-y.patch  0010-configure-don-t-add-fomit-frame-pointer.patch  fexecve.patch
libs/none/musl/patches/upstream/: 0001-implement-fexecve-in-terms-of-execveat-when-it-exist.patch  increase-default-thread-stack-guard-size.patch
libs/none/unwind/: UnwindRegistersSave.S
libs/wllvm/: CMakeLists.txt  Makefile.in  WLLVMFile.cpp  WLLVMLink.cpp
nix/: build-as-allvm-channel-override.nix  build.nix  fetch-nixpkgs.nix  nixpkgs-src.json  nixpkgs-src.nix  overlay.nix  release.nix
test/: CMakeLists.txt  D34732.diff  clean-output-directory.patch  get-llvm-lit.sh  lit.cfg.py  lit.site.cfg.in  lit.site.cfg.py.in
test/lit/: all-info-which.test  alley-argv0-relative.test  alley-argv0.test  alley-invalid-cache.ll  alley-multi.test  alley-noargs.test  alley-noexec-undefined-symbol.ll  alley-noexec.test  alley-static-which.test  alley-which-cache.test  alley-which.test  alley.ll  allmux-dup.test  allmux-hidden.ll  allmux-lib-ctor.test  allmux-static-ctor-bitcast.ll  allmux-static-ctor.ll  allmux-timewhich.test  allopt-O2.test  allopt-analyze.test  allopt-cat.test  allopt-chain.test  allopt-force.test  allready-alley-cache.test  allready-output.test  alltogether-hidden-main.ll  alltogether-missing-target-info.test  alltogether-multi.test  alltogether-overwrite.test  alltogether-which.test  bc2allvm-fail.ll  bc2allvm-fail.test  bc2allvm-file-fail.test  bc2allvm-force.test  bc2allvm-input-fail.test  bc2allvm-module-fail.test  bc2allvm-multiple.test  bc2allvm-nomain.test  bc2allvm-non-bc-inputs.test  bc2allvm-output-fail.test  (+23 more)
test/lit/Inputs/: deasm-bswap.ll  dlopen  dlsym  env.allexe  lib_ctorA  lib_ctorB  missing-target-info  multi-lib.ll  multi-main.ll  printf  simple-multi  simplest.ll  test-invalid-bitcode  time  which
test/lit/samples/: which
test/lit/source/: Makefile  mainA.c  (+1 more)
tools/: CMakeLists.txt  Makefile.in  bc2allvm  format.sh
tools/all-info/: CMakeLists.txt  all-info.cpp
tools/all2bc/: Makefile.in  all2bc.cpp
tools/alld/: CMakeLists.txt  alld.cpp
tools/alley/: CMakeLists.txt  ExecutionYengine.h  ExecutorMain.cpp  HostedImageExecutor.cpp  ImageCache.cpp  ImageCache.h  ImageExecutor.cpp  ImageExecutor.h  JIT.cpp  JITCache.h  JITExecutionYengine.cpp  LinuxJIT.cpp  Makefile.in  PlatformSpecificJIT.h  Static.cpp  StaticBinaryCache.cpp  StaticBinaryCache.h  StaticExecutionYengine.cpp  alley.cpp  alley.h
tools/allmux/: CMakeLists.txt  CtorUtils.cpp  CtorUtils.h  allmux.cpp
tools/allmux/main/: NOTES  mux_main.bc  mux_main.cpp
tools/allopt/: CMakeLists.txt  allopt.cpp
tools/allready/: CMakeLists.txt  allready.cpp
tools/alltogether/: CMakeLists.txt  Makefile.in  alltogether.cpp
tools/bc2allvm/: CMakeLists.txt  bc2allvm.cpp
tools/wllvm/: CMakeLists.txt  Error.h  Makefile.in  WLLVMFile.cpp  WLLVMFile.h  wllvm-dump.cpp  wllvm-extract.cpp
tools/wllvm-dump/: CMakeLists.txt  wllvm-dump.cpp
tools/wllvm-extract/: CMakeLists.txt  wllvm-extract.cpp
(+10 files in other folders)
